--- a/index.html
+++ b/index.html
@@ -32,12 +32,13 @@
                     <div>
                         <label for="holder-name">CARDHOLDER NAME</label>
                         <input type="text" class="holder-name" id="holderNameInput">
-                        <p class="error">can't be blank</p>
+                        <p class="error ">can't be blank</p>
                     </div>
                     <div>
                         <label for="card-no">CARD NUMBER</label>
                         <input type="text" class="card-no" id="cardNoInput" maxlength="16" onkeypress="return onlyNums(event)">
-                        <p class="error">That's not a valid, enter numbers only</p>
+                        <p class="error">Please fill in card no</p>
+                        <p class="error card-err-2">Card no must be 16 digits</p>
                     </div>
                     <div class="inp2">
                         <div class="exp-cont">
@@ -46,22 +47,30 @@
                                 <input type="text" class="exp-month" id="dateMInput"  maxlength="2" onkeypress="return onlyNums(event)">
                                 <input type="text" class="exp-year" id="dateYInput"  maxlength="2" onkeypress="return onlyNums(event)">
                             </div>
-                            <p class="error">can't be blank</p>
+                            <p class="error">Expiry date not correct</p>
                         </div>
                         <div class="cvv-cont">
                             <label for="holder-name">CVV</label>
                             <input type="text" class="cvv" id="cvvInput" maxlength="3" onkeypress="return onlyNums(event)">
-                            <p class="error">can't be blank</p>
+                            <p class="error">Enter correct CVV</p>
+                            <p class="error cvv-err-2">CVV must be 3 digits</p>
                         </div>
                     
                     </div>
-                    <button class="submit" onclick="validateForm()">confirm</button>
+                    <button id="submit" onclick="validateForm()">confirm</button>
                 </form>
+                <div class="success-cont">
+                    <img src="/images/icon-complete.svg" alt="">
+                    <p class="succ-text-1">THANK YOU!</p>
+                    <p class="succ-text-2">We've added your details confidentially</p>
+                    <button class="cont" id="continue">Continue</button>
+
+                </div>
             </div>
             
         </div>
 
     </div>
-    <script src="index.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
